--- a/src/components/Header/Cart/cart.css
+++ b/src/components/Header/Cart/cart.css
@@ -19,12 +19,16 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    box-shadow: 0 2px 3px rgba(0,0,0,0.1); 
 }
 
 .thumbnail-img {
     width: 50px;
     height: 50px;
     border-radius: 5px;
+    border: 1px solid #e3e3e3;
 }
 
 .item-details {
@@ -40,6 +44,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.item-total{
+    font-weight: bold;
 }
 
 .delete-button {
