--- a/src/components/Shop/PlantCard/plantcard.css
+++ b/src/components/Shop/PlantCard/plantcard.css
@@ -1,9 +1,7 @@
-/* plantcard.css */
-
 .plant-card {
   border: 1px solid #ccc;
   border-radius: 10px;
-  padding: 10px;
+  padding: 20px;
   width: 100%;
   max-width: 300px;
   text-align: center;
@@ -26,6 +24,24 @@
 
 .plant-details p{
   font-size: 14px;
+}
+
+.prices{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 10px;
+}
+
+.old-price{
+  color: #aaa;
+  text-decoration: line-through;
+  margin: 0;
+}
+
+.new-price{
+  font-weight: bold;
+  margin: 0;
 }
 
 .action-row {
