--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -36,9 +36,14 @@
     background-color: transparent;  
     border: none;
     cursor: pointer;
+    position: relative;
 }
 
 .cart-quantity{
+    position: absolute;
+    top: -4px;
     background-color: #96ca80;
     border-radius: 50%;
+    font-size: 11px;
+    width: 11px;
 }
