--- a/src/components/Shop/shop.css
+++ b/src/components/Shop/shop.css
@@ -9,3 +9,10 @@
   justify-content: center;
   gap: 20px; /* Adds space between items */
 }
+
+.shop-image{
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+  max-height: 100vh;
+}
