--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,11 +1,11 @@
 .site-home {
-    position: relative;
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 75%, rgb(150, 202, 128) 75%, rgb(150, 202, 128) 100%);
-    height: 100vh;
-    padding-top: 80px;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
+  position: relative;
+  background: url('../../assets/home/background-img.jpg') no-repeat center center/cover;
+  height: 100vh;
+  padding-top: 80px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
 }
 
 .socials{
@@ -14,18 +14,9 @@
     align-items: center;
     justify-content: center;
     gap: 15px;
-    color: #717171 ;
+    color: #000 ;
     position: absolute;
     left: -50px;
-}
-
-.hero-image {
-    position: absolute;
-    left: 75%;
-    top: 52%;
-    transform: translate(-50%, -50%);
-    width: 450px;
-    height: 600px;
 }
 
 .home-text-section {
@@ -35,7 +26,7 @@
     width: 75%;
     height: 100%;
     position: absolute;
-    left: 15%;
+    left: 10%;
     top: 0;
     padding: 0 2rem;
     box-sizing: border-box;
@@ -183,3 +174,67 @@
               transform: translateY(100%);
     }
   }
+
+
+/* CSS */
+.button-85 {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #48ff00,
+    #96ca80,
+    #6a9259,
+    #3ea738
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
