--- a/src/components/Shop/shop.css
+++ b/src/components/Shop/shop.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px; /* Adds space between items */
+  gap: 20px; 
 }
 
 .shop-image{
