--- a/src/components/BestSeller/bestseller.css
+++ b/src/components/BestSeller/bestseller.css
@@ -1,27 +1,92 @@
-.bestseller-wrapper{
+.bestseller-wrapper {
     padding-inline: 50px;
 }
 
-.bestseller-heading{
+.bestseller-heading {
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
     margin-block: 60px;
 }
 
-.bestseller-items{
+.bestseller-items {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    gap: 40px;
 }
 
-.bestseller-item{
+.bestseller-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     box-sizing: border-box;
-    max-width: 300px;
+    width: 300px;
+    padding: 20px 20px 50px 20px;
+    background-color: #eaede5;
+    border-radius: 7px;
+    position: relative;
+    overflow: hidden;
 }
 
-.bestseller-item img{
+.bestseller-item img {
     object-fit: contain;
     max-width: 100%;
-    height: 300px;
-    filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.2)) ;
+    height: 270px;
+    filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.2));
+}
+
+.bestseller-cart-btn {
+    display: none;
+    position: absolute;
+    bottom: 7px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 7px 20px;
+    background-color: transparent;
+    color: #000;
+    border: 2px solid #000;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.bestseller-item:hover .bestseller-cart-btn {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+    opacity: 1;
+}
+
+
+
+.item-wrap h3 {
+    margin-top: 10px;
+    margin-bottom: 0;
+    font-size: 17px;
+}
+
+.item-wrap p{
+    font-size: 14px;
+    color: #6a6a6a;
+    margin: 0;
+    padding-top: 7px;
+}
+
+.view-all-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-block: 50px;
+}
+
+.view-all-button button {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+    background-color: #000;
+    color: #fff;
+    padding: 10px 30px;
+    border-color: transparent;
+    cursor: pointer;
 }
