--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -10,6 +10,7 @@
     z-index: 1000;  
     padding-inline: 5rem;  
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);  
+    background-color: #fff;
 }
 
 .header-wrapper {
