--- a/src/components/PlaceOrder/placeorder.css
+++ b/src/components/PlaceOrder/placeorder.css
@@ -1,39 +1,75 @@
 .place-order-wrapper{
-    padding-inline: 80px;
+    padding-inline: 7em;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 100px;
+    
 
 }
 
 .order-heading{
     font-size: 40px;
     text-align: center;
+    margin-bottom: 80px;
 }
 
-.order-left-section,
-.order-right-section{
-    width: 50%;
+.order-left-section
+{
+    width: 60%;
 }
 
+.order-img{
+    max-width:70%;
+    opacity: 0.9;
+    border-radius: 50% 50% 50% 50% / 0% 100% 0% 100%  ;
+}
 .order-right-section{
+    width: 40%;
+}
+
+.order-right-section {
+    width: 40%;
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.order-img{
-    max-width: 500px;
-}
-
-.order-item{
+.order-item {
+    box-sizing: border-box;
     display: flex;
     align-items: center;
-    padding: 20px;
-    border: 1px solid black;
-    width: 400px;
+    padding: 22px;
+    border: 1px solid #ccc;
+    cursor: pointer;
+    background-color: transparent; 
+    color: initial; 
+    text-shadow: #777;
+    transition: background-color 0.3s ease, color 0.3s ease; 
 }
+
+@keyframes highlightItem {
+    0% { background-color: transparent; color: initial;} 
+    33.33% { background-color: #96ca80; color: #fff; border-color: #96ca80; } 
+    66.66% { background-color: transparent; color: initial; } 
+}
+
+.order-item:nth-child(1) {
+    animation: highlightItem 6s infinite;
+    animation-delay: 0s;
+}
+
+.order-item:nth-child(2) {
+    animation: highlightItem 6s infinite;
+    animation-delay: 2s;
+}
+
+.order-item:nth-child(3) {
+    animation: highlightItem 6s infinite;
+    animation-delay: 4s;
+}
+
+
 
 .order-number {
     background-color: #5c5c5c;
