--- a/src/components/Shop/shop.css
+++ b/src/components/Shop/shop.css
@@ -1,6 +1,9 @@
 .shop {
-  padding: 20px;
   text-align: center;
+}
+
+.shop-wrapper{
+  padding: 20px;
 }
 
 .plant-list {
@@ -10,9 +13,22 @@
   gap: 20px; 
 }
 
-.shop-image{
+.shop-background{
   object-fit: cover;
   width: 100%;
   height: auto;
-  max-height: 100vh;
+  max-height: 85vh;
+}
+
+.shop-heading{
+ text-align: start;
+  border-bottom: 1px solid #ccc;
+  margin-block: 40px;
+  padding-bottom: 10px;
+  padding-inline: 70px;
+}
+
+.shop-heading h2{
+  font-size: 50px;
+  color: #96ca80;
 }
