--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,4 @@
 .site-footer{
-    padding: 60px;
     margin-top: 60px;
     background-color: #96ca80;
 }
@@ -8,6 +7,7 @@
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
+    padding: 60px;
 }
 
 .footer-logo{
@@ -45,4 +45,15 @@
 .footer-links li:hover,
 .social-links li:hover{
     color: #fff;
+}
+
+.copyright{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.copyright p{
+    font-size: 13px;
+    color: rgb(75, 75, 75);
 }
