--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -8,7 +8,6 @@
     align-items: center;
     justify-content: space-between; 
     z-index: 1000;  
-    padding-inline: 5rem;  
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);  
     background-color: #fff;
 }
@@ -18,6 +17,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;  
+    padding-inline: 5rem;  
 }
 
 .header-logo p{
@@ -51,3 +51,63 @@
     font-size: 11px;
     width: 11px;
 }
+
+.mobile-menu-toggle{
+    display: none;
+}
+
+@media screen and (max-width: 770px) {
+    .mobile-menu-toggle{
+        display: block;
+    }
+
+    .header-links,
+    .search-cart{
+        display: none;
+    }
+    }
+
+    .mobile-menu{
+        position: fixed;
+        top: 0;
+        background-color: #fff;
+        color: #000;
+        width: 100%;
+        padding-block: 15px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .mobile-menu-wrapper{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .mobile-header-links{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        margin-bottom: 15px;
+    }
+
+    .mobile-header-links a{
+        text-decoration: none;
+        color: #000;
+    }
+
+    .mobile-logo-wrap{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .close-icon,
+    .mobile-search-button,
+    .mobile-cart-btn{
+        background-color: #fff;
+        padding: 5px;
+        border: none;
+    }
